--- a/task11/weather/src/main/resources/application.properties
+++ b/task11/weather/src/main/resources/application.properties
@@ -1,17 +1,4 @@
-spring.application.name=weather
 server.port=8082
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-
-# ??? ???? ???????? ??????????? ?????????? ????????? ??
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# ??? JPA
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+appid=b2df6d0438102b1b548b73cf2af59af4
+url.weather=https://api.openweathermap.org/data/2.5/weather
+#cache.ttl.seconds=60
