--- a/task11/weather/src/main/resources/application.properties
+++ b/task11/weather/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=weather
 server.port=8082
 appid=b2df6d0438102b1b548b73cf2af59af4
 url.weather=https://api.openweathermap.org/data/2.5/weather
