--- a/task11/location/src/main/resources/application.properties
+++ b/task11/location/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 spring.application.name=location
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.h2.console.enabled=true
-#
+server.port=8083
 
-# ??? ???? ???????? ??????????? ?????????? ????????? ??
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# ??? JPA
-spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
