--- a/task11/person/pom.xml
+++ b/task11/person/pom.xml
@@ -4,18 +4,22 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<!-- Ссылка на родительский POM -->
 	<parent>
 		<groupId>com.example</groupId>
 		<artifactId>parent-project</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<!-- Идентификатор модуля -->
+	<groupId>com.example</groupId>
 	<artifactId>person</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>person</name>
+	<description>Person service</description>
+	<properties>
+		<java.version>17</java.version>
+		<spring-cloud.version>2024.0.1</spring-cloud.version>
+	</properties>
 
-	<!-- Зависимости модуля -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -28,13 +32,11 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>2.2.224</version> <!-- Явно указываем версию H2 -->
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version> <!-- Указываем версию Lombok -->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -42,13 +44,26 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
-			<groupId>com.example</groupId>
-			<artifactId>location</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<scope>compile</scope>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<build>
 		<plugins>
 			<plugin>
