--- a/task11/person/src/main/resources/application.properties
+++ b/task11/person/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=person-info-service
+spring.application.name=person-service
 server.port=8080
+location.url=location-service
 
 spring.datasource.url=jdbc:h2:file:./testdbpers
 spring.datasource.driver-class-name=org.h2.Driver
