--- a/task11/location/src/main/resources/application.properties
+++ b/task11/location/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.application.name=location-info-service
+spring.application.name=location-service
 server.port=8083
 
+weather.url=weather-info-service
 
 spring.datasource.url=jdbc:h2:file:./testdbloc
 spring.datasource.driver-class-name=org.h2.Driver
