--- a/task11/location/src/main/resources/application.properties
+++ b/task11/location/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=location
 server.port=8083
 
 
-spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.url=jdbc:h2:file:./testdbloc
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
