--- a/task11/person/src/main/resources/application.properties
+++ b/task11/person/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=person
 server.port=8080
 
-spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.url=jdbc:h2:file:./testdbpers
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
